--- a/src/lib/inputs/input/style.css
+++ b/src/lib/inputs/input/style.css
@@ -1,21 +1,60 @@
 .WuiInput__root {
   border: 0;
-  border-radius: var(--border-radius);
+  border-radius: var(--radius);
   width: 100%;
-  /* This is to cater for the error text */
-  padding-bottom: 4px;
-}
-
-.WuiInput__root:invalid {
-  --WuiLabel-color: var(--color-status-error) !important;
-}
-
-.WuiInput__root:focus-within {
-  --WuiLabel-color: var(--color-primary);
 }
 
 .WuiInput__root__body {
   border-radius: inherit;
   width: 100%;
   position: relative;
+}
+
+.WuiInput--primary {
+  --WuiInput-color-plain: var(--color-blue-1);
+  --WuiInput-color-bg: var(--color-primary);
+  --WuiInput-color-on-bg: var(--color-on-primary);
+  --WuiInput-color-bg-soft: var(--color-selection-container);
+  --WuiInput-color-outline: var(--color-primary);
+  --WuiLabel-color: var(--color-primary);
+}
+.WuiInput--neutral {
+  --WuiInput-color-plain: var(--color-grey-1);
+  --WuiInput-color-bg: var(--color-neutral);
+  --WuiInput-color-on-bg: var(--color-on-neutral);
+  --WuiInput-color-bg-soft: var(--color-neutral-container);
+  --WuiInput-color-outline: var(--color-hairline);
+  --WuiLabel-color: var(--color-neutral);
+}
+.WuiInput--neutral:focus-within {
+  --WuiInput-color-plain: var(--color-blue-1);
+  --WuiInput-color-on-bg: var(--color-on-primary);
+  --WuiInput-color-bg-soft: var(--color-selection-container);
+  --WuiInput-color-outline: var(--color-primary);
+  --WuiLabel-color: var(--color-primary);
+}
+.WuiInput--success {
+  --WuiInput-color-plain: var(--color-green-1);
+  --WuiInput-color-bg: var(--color-success);
+  --WuiInput-color-on-bg: var(--color-on-success);
+  --WuiInput-color-bg-soft: var(--color-success-container);
+  --WuiInput-color-outline: var(--color-success);
+  --WuiLabel-color: var(--color-success);
+}
+.WuiInput--warning {
+  --WuiInput-color-plain: var(--color-yellow-1);
+  --WuiInput-color-bg: var(--color-warning);
+  --WuiInput-color-on-bg: var(--color-on-warning);
+  --WuiInput-color-bg-soft: var(--color-warning-container);
+  --WuiInput-color-outline: var(--color-warning);
+  --WuiLabel-color: var(--color-warning);
+}
+.WuiInput--danger, .WuiInput__root:invalid {
+  --WuiInput-color-plain: var(--color-red-1);
+  --WuiInput-color-bg: var(--color-error);
+  --WuiInput-color-on-bg: var(--color-on-error);
+  --WuiInput-color-bg-soft: var(--color-error-container);
+  --WuiInput-color-on-bg-soft: var(--color-error);
+  --WuiInput-color-outline: var(--color-error);
+  --WuiLabel-color: var(--color-error);
 }
