--- a/src/lib/styles/global.css
+++ b/src/lib/styles/global.css
@@ -47,59 +47,85 @@
   --font-body-small: 400 12px/16px var(--font-inter);
   --font-code: 400 24px/32px var(--font-inter);
 
-  --color-primary: #0092CC;
-  --color-on-primary: #FFF;
+  --color-blue-1: #F7FBFD;
+  --color-blue-2: #dff1f9;
+  --color-blue-3: #bfe4f2;
+  --color-blue-4: #20a0d2;
+  --color-blue-5: #0092cc;
+  --color-blue-6: #0080b3;
 
-  --color-primary-inverse: #8ab4f8;
-  --color-on-primary-inverse: #202124;
+  --color-yellow-1: #FFFCF7;
+  --color-yellow-2: #FDF4DF;
+  --color-yellow-3: #FCE9BF;
+  --color-yellow-4: #F4B120;
+  --color-yellow-5: #F2A600;
+  --color-yellow-6: #D49100;
+
+  --color-red-1: #FFF8F8;
+  --color-red-2: #FFE5E5;
+  --color-red-3: #FFCCCC;
+  --color-red-4: #FF4D4D;
+  --color-red-5: #FF3333;
+  --color-red-6: #DF2D2D;
+
+  --color-green-1: #FBFCF8;
+  --color-green-2: #EEF2E5;
+  --color-green-3: #DDE6CC;
+  --color-green-4: #88A64D;
+  --color-green-5: #779933;
+  --color-green-6: #68862D;
+
+  --color-grey-1: #FCFCFC;
+  --color-grey-2: #F3F4F5;
+  --color-grey-3: #DBDEE0;
+  --color-grey-4: #B7BCC2;
+  --color-grey-5: #9FA6AD;
+  --color-grey-6: #777D82;
+
+  --color-primary: var(--color-blue-5);
+  --color-on-primary: #FFF;
+  --color-primary-container: var(--color-blue-2);
+
+  --color-neutral: var(--color-grey-6);
+  --color-on-neutral: #fff;
+  --color-neutral-container: var(--color-grey-2);
+
+  --color-success: var(--color-green-5);
+  --color-on-success: #fff;
+  --color-success-container: var(--color-green-2);
+
+  --color-warning: var(--color-yellow-5);
+  --color-on-warning: #fff;
+  --color-warning-container: var(--color-yellow-2);
+
+  --color-error: var(--color-red-5);
+  --color-on-error: #fff;
+  --color-error-container: var(--color-red-2);
 
   --color-surface: #fff;
   --color-on-surface: #000;
   --color-on-surface-variant: #5f6368;
 
-  --color-surface-inverse: #202124;
-  --color-on-surface-inverse: #e8eaed;
-
-  --color-surface-elevation: #fff;
-
-  --color-primary-container: #e8f0fe;
-  --color-on-primary-container: #0092CC;
-
-  --color-neutral-container: #636B74;
-  --color-on-neutral-container: #fff;
-
-  --color-container: #f8f9fa;
+  --color-container: var(--color-grey-1);
   --color-on-container: #202124;
 
-  --color-hover: #e8eaed;
+  --color-hover: var(--color-grey-2);
   --color-on-hover: #202124;
 
   --color-scrim: rgba(50,56,62,.25);
 
-  --color-shadow: #3c4043;
-  --color-outline: #e5e5e5;
-  --color-hairline: #dadce0;
+  --color-shadow: var(--color-grey-6);
+  --color-outline: var(--color-grey-3);
+  --color-hairline: var(--color-grey-5);
 
-  --color-selection: #0092CC;
-  --color-selection-container: #e8f0fe;
-  --color-on-selection-container: #0092CC;
+  --color-selection: var(--color-blue-5);
+  --color-on-selection: #fff;
+  --color-selection-container: var(--color-blue-2);
 
-  --color-link: #0092CC;
+  --color-link: var(--color-blue-5);
 
-  --color-disabled: rgba(0,0,0,0.54);
-  --color-disabled-container: #f5f5f5;
-
-  --color-status-success: #0b8043;
-  --color-status-on-success: #fff;
-  --color-status-success-container: #e2f3eb;
-
-  --color-status-warning: #f2a600;
-  --color-status-on-warning: #fff;
-  --color-status-warning-container: #fef6e0;
-
-  --color-status-error: #ff3333;
-  --color-status-on-error: #fff;
-  --color-status-error-container: #fbe9e7;
+  --color-disabled: var(--color-grey-5);
+  --color-on-disabled: #FFF;
 
   --space-xs: 0.1875rem;
   --space-sm: 0.3125rem;
@@ -115,9 +141,9 @@
   --input-height-md: 2.5rem;
   --input-height-lg: 3rem;
 
-  --border-radius: 3px;
+  --radius: 4px;
 
-  --line-rule: 0.9px solid var(--color-outline);
+  --line: 0.9px solid var(--color-outline);
 }
 
 /* @media (prefers-color-scheme: dark) {
@@ -170,28 +196,28 @@ a {color: inherit;text-decoration: none;}
   color: var(--color-on-primary);
 }
 .WuiBg-neutral {
-  background-color: var(--color-neutral-container);
-  color: var(--color-on-neutral-container);
+  background-color: var(--color-neutral);
+  color: var(--color-on-neutral);
 }
 .WuiBg-success {
-  background-color: var(--color-status-success);
-  color: var(--color-status-on-success);
+  background-color: var(--color-success);
+  color: var(--color-on-success);
 }
 .WuiBg-warning {
-  background-color: var(--color-status-warning);
-  color: var(--color-status-on-warning);
+  background-color: var(--color-warning);
+  color: var(--color-on-warning);
 }
 .WuiBg-danger {
-  background-color: var(--color-status-error);
-  color: var(--color-status-on-error);
+  background-color: var(--color-error);
+  color: var(--color-on-error);
 }
 
 .Wui-disabled {
   pointer-events: none;
   cursor: default;
   --Icon-color: currentColor;
-  color: var(--variant-solidDisabledColor, var(--joy-palette-primary-solidDisabledColor, var(--joy-palette-neutral-400, #9FA6AD)));
-  background-color: var(--variant-solidDisabledBg, var(--joy-palette-primary-solidDisabledBg, var(--joy-palette-neutral-100, #F0F4F8)));
+  color: var(--color-on-disabled);
+  background-color: var(--color-disabled);
 }
 
 .hidden {
