feat: added a logo component

--- a/src/lib/button/style.css
+++ b/src/lib/button/style.css
@@ -119,6 +119,7 @@
 }
 .WuiButton--none, .WuiButton--none:hover {
   background-color: transparent;
+  color: var(--WuiButton-bg, var(--color-primary));
   --WuiButton-height: auto !important;
   --WuiButton-paddingX: 0 !important;
 }
