--- a/src/lib/styles/global.css
+++ b/src/lib/styles/global.css
@@ -33,20 +33,6 @@
 :root {
   --max-width: 100%;
 
-  --font-headline-large: 400 32px/40px var(--font-inter);
-  --font-headline-medium: 400 28px/36px var(--font-inter);
-  --font-headline-small: 400 24px/32px var(--font-inter);
-  --font-title-large: 400 20px/28px var(--font-inter);
-  --font-title-medium: 400 18px/24px var(--font-inter);
-  --font-title-small: 500 15px/20px var(--font-inter);
-  --font-label-large: 500 15px/20px var(--font-inter);
-  --font-label-medium: 500 13px/20px var(--font-inter);
-  --font-label-small: 500 12px/16px var(--font-inter);
-  --font-body-large: 400 15px/20px var(--font-inter);
-  --font-body-medium: 400 13px/20px var(--font-inter);
-  --font-body-small: 400 12px/16px var(--font-inter);
-  --font-code: 400 24px/32px var(--font-inter);
-
   --color-blue-1: #F7FBFD;
   --color-blue-2: #dff1f9;
   --color-blue-3: #bfe4f2;
@@ -132,6 +118,8 @@
   --space-nm: 0.5rem;
   --space-md: 0.8125rem;
   --space-lg: 1.3125rem;
+  --space-xl: 2.125rem;
+  --space-xx: 3.4375rem;
 
   --button-height-sm: 2.125rem;
   --button-height-md: 2.5rem;
@@ -161,24 +149,30 @@
 
 html,
 body {
-  font-family: 'Inter';
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   max-width: 100vw;
   overflow-x: hidden;
   margin: 0 !important;
+  -moz-osx-font-smoothing: greyscale;
 }
 
-h1,h2,h3,h4,h5,h6 {margin-block-end: 0;margin-block-start: 0}
-h1 {font-size: 2rem;   line-height: 2.5rem;  font-weight: 400}
-h2 {font-size: 1.75rem;line-height: 2.25rem; font-weight: 400}
-h3 {font-size: 1.5rem; line-height: 2rem;    font-weight: 400}
-h4 {font-size: 1.25rem;line-height: 1.75rem; font-weight: 400}
-h5 {font-size: 1.125px;line-height: 1.5rem;  font-weight: 400}
-h6 {font-size: 1rem;   line-height: 1.375rem;font-weight: 400}
+h1,h2,h3,h4,h5,h6 {
+  font-weight: 500;
+  margin-block-end: 0;
+  margin-block-start: 0
+}
+h1 {font-size: 2rem;   line-height: 2.5rem}
+h2 {font-size: 1.75rem; line-height: 2.25rem}
+h3 {font-size: 1.5rem; line-height: 2rem}
+h4 {font-size: 1.25rem; line-height: 1.75rem}
+h5 {font-size: 1.125rem; line-height: 1.5rem}
+h6 {font-size: 1rem; line-height: 1.375rem}
 
 body {
   color: var(--color-on-surface);
   background-color: var(--color-surface);
   font-size: 0.875rem;
+  font-weight: 400;
 }
 
 a {color: inherit;text-decoration: none;}
