--- a/src/lib/inputs/input/style.css
+++ b/src/lib/inputs/input/style.css
@@ -23,8 +23,8 @@
   --WuiInput-color-bg: var(--color-neutral);
   --WuiInput-color-on-bg: var(--color-on-neutral);
   --WuiInput-color-bg-soft: var(--color-neutral-container);
-  --WuiInput-color-outline: var(--color-grey-5);
-  --WuiLabel-color: var(--color-grey-6);
+  --WuiInput-color-outline: var(--color-grey-4);
+  --WuiLabel-color: var(--color-black-3);
 }
 .WuiInput--neutral:focus-within {
   --WuiLabel-color: var(--color-primary);
