--- a/src/lib/styles/global.css
+++ b/src/lib/styles/global.css
@@ -33,6 +33,13 @@
 :root {
   --max-width: 100%;
 
+  --color-black-1: #606060;
+  --color-black-2: #404040;
+  --color-black-3: #202020;
+  --color-black-4: #000000;
+
+  --color-white: #fff;
+
   --color-blue-1: #F7FBFD;
   --color-blue-2: #dff1f9;
   --color-blue-3: #bfe4f2;
@@ -72,7 +79,7 @@
   --color-on-primary: #FFF;
   --color-primary-container: var(--color-blue-2);
 
-  --color-neutral: var(--color-grey-6);
+  --color-neutral: var(--color-grey-5);
   --color-on-neutral: #fff;
   --color-neutral-container: var(--color-grey-2);
 
@@ -89,14 +96,14 @@
   --color-error-container: var(--color-red-2);
 
   --color-surface: #fff;
-  --color-on-surface: #000;
+  --color-on-surface: var(--color-black-4);
   --color-on-surface-variant: #5f6368;
 
   --color-container: var(--color-grey-1);
-  --color-on-container: #202124;
+  --color-on-container: var(--color-black-3);
 
   --color-hover: var(--color-grey-2);
-  --color-on-hover: #202124;
+  --color-on-hover: var(--color-black-3);
 
   --color-scrim: rgba(50,56,62,.25);
 
@@ -110,7 +117,7 @@
 
   --color-link: var(--color-blue-5);
 
-  --color-disabled: var(--color-grey-5);
+  --color-disabled: var(--color-grey-4);
   --color-on-disabled: #FFF;
 
   --space-xs: 0.1875rem;
@@ -140,20 +147,18 @@
 
 * {
   box-sizing: border-box;
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   padding: 0;
   margin: 0;
   vertical-align: baseline;
-  font-family: var(--font-inter);
   transition: background-color 0.2s ease-in-out;
 }
 
 html,
 body {
-  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   max-width: 100vw;
   overflow-x: hidden;
   margin: 0 !important;
-  -moz-osx-font-smoothing: greyscale;
 }
 
 h1,h2,h3,h4,h5,h6 {
