--- a/src/lib/button/style.css
+++ b/src/lib/button/style.css
@@ -1,5 +1,4 @@
 .WuiButton {
-  -webkit-box-align: center;
   align-items: center;
   border: 1px solid var(--WuiButton-border-color, transparent);
   border-radius: var(--WuiButton-border-radius, var(--radius));
@@ -10,16 +9,8 @@
   flex-wrap: nowrap;
   gap: var(--WuiButton-flex-gap, var(--space-nm));
   height: var(--WuiButton-height, var(--button-height));
-  line-height: var(--WuiButton-height, var(--button-height));
-  -webkit-box-pack: center;
-  justify-content: center;
-  outline: none;
+  justify-content: var(--WuiButtonFlex-justify, center);
   padding: 0 var(--WuiButton-paddingX, var(--space-md));
-  position: relative;
-  text-decoration: none;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  width: var(--WuiButton-width, auto);
 }
 .WuiButton:disabled {
   pointer-events: none;
@@ -63,7 +54,7 @@
 .WuiButton--neutral {
   --WuiButton-bg: var(--color-neutral);
   --WuiButton-bg-soft: var(--color-neutral-container);
-  --WuiButton-color-on-bg-soft: var(--color-black-3);
+  --WuiButton-color-on-bg-soft: var(--color-black-1);
 }
 .WuiButton--success {
   --WuiButton-bg: var(--color-success);
@@ -118,13 +109,31 @@
   --WuiButton-paddingX: 0 !important;
 }
 
-.WuiButton--bold {
-  font-weight: 500;
-}
+.WuiButton--width-full {width: 100%;}
+.WuiButton--width-half {width: 50%;}
+.WuiButton--width-third {width: 33.333333%;}
+.WuiButton--width-quarter {width: 25%;}
+.WuiButton--width-auto {width: auto;}
+.WuiButton--width-inherit {width: inherit;}
+
+.WuiButton--height-full {height: 100%;}
+.WuiButton--height-half {height: 50%;}
+.WuiButton--height-third {height: 33.333333%;}
+.WuiButton--height-quarter {height: 25%;}
+.WuiButton--height-auto {height: auto;}
+.WuiButton--height-inherit {height: inherit;}
 
 .WuiButton--only-icon {
-  --WuiButton-width: var(--WuiButton-height);
+  width: var(--WuiButton-height);
   --WuiButton-paddingX: 0;
+}
+
+.WuiButton__text {
+  max-width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-decoration: none;
+  white-space: nowrap;
 }
 
 .WuiButton__loader {
