--- a/src/lib/styles/global.css
+++ b/src/lib/styles/global.css
@@ -1,7 +1,7 @@
 @font-face {
-  font-family: "Inter";
-  src: url("./fonts/inter.ttf") format("truetype");
-  font-weight: 300 400 500 600 700;
+  font-family: "Lexend";
+  src: url("./fonts/lexend.ttf") format("truetype");
+  font-weight: 300 400 500 600;
   font-stretch: 75% 125%;
   font-style: oblique 0deg 12deg;
 }
@@ -15,7 +15,6 @@
 
 .material-symbols-rounded {
   font-family: "Material Symbols Rounded";
-  font-weight: normal;
   font-style: normal;
   font-size: 1.5rem;
   letter-spacing: normal;
@@ -147,11 +146,12 @@
 
 * {
   box-sizing: border-box;
-  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  font-family: 'Lexend', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   padding: 0;
   margin: 0;
   vertical-align: baseline;
   transition: background-color 0.2s ease-in-out;
+  outline: none;
 }
 
 html,
