--- a/src/routes/style.css
+++ b/src/routes/style.css
@@ -1,16 +1,11 @@
-.col {
-  padding: 50px 10%
-}
-
-.menu {
-  width: 300px;
-  height: 500px;
+.page {
+  padding: var(--space-lg);
 }
 
 .input {
-  width: 300px;
+  width: 100%;
 }
 
 .button {
-  width: 150px !important;
+  width: 150px;
 }
