--- a/src/lib/inputs/listbox/style.css
+++ b/src/lib/inputs/listbox/style.css
@@ -1,9 +1,9 @@
-.WuiListBox {
+.WuiListbox {
   border: 1px solid var(--color-outline);
   min-height: 50px;
   padding: var(--space-xs) 0;
 }
 
-.WuiListBox__listitem {
+.WuiListbox__listitem {
   border-radius: 0;
 }
